# fibad

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .setup_dev.sh  README.md  README_RSP.md  auto_encoder_investigation.ipynb  chroma_benchmark.py  drews_config.toml  fibad_default_config.toml  index.json  info.json  mpr_demo.html  mpr_demo.ipynb  pyproject.toml  regressions.json  regressions.xml  tomlkit_test.ipynb
.github/: README.md  pull_request_template.md
.github/workflows/: smoke-test.yml  testing-and-coverage.yml
_results/gh-runner/: 000c5651-virtualenv-py3.10-Cython-build-packaging.json  02c75611-virtualenv-py3.10-Cython-build-packaging.json  02df7b5f-virtualenv-py3.10-Cython-build-packaging.json  0467d4a1-virtualenv-py3.10-Cython-build-packaging.json  0998d614-virtualenv-py3.10-Cython-build-packaging.json  0c998169-virtualenv-py3.10-Cython-build-packaging.json  0cd1e6cf-virtualenv-py3.10-Cython-build-packaging.json  0cfbc26e-virtualenv-py3.10-Cython-build-packaging.json  10061e13-virtualenv-py3.10-Cython-build-packaging.json  11a235a9-virtualenv-py3.10-Cython-build-packaging.json  1615ee68-virtualenv-py3.10-Cython-build-packaging.json  161b8060-virtualenv-py3.10-Cython-build-packaging.json  16a6b688-virtualenv-py3.10-Cython-build-packaging.json  191a12fb-virtualenv-py3.10-Cython-build-packaging.json  1f946e86-virtualenv-py3.10-Cython-build-packaging.json  2356b0af-virtualenv-py3.10-Cython-build-packaging.json  24de59c2-virtualenv-py3.10-Cython-build-packaging.json  24f2f510-virtualenv-py3.10-Cython-build-packaging.json  28c3eb4a-virtualenv-py3.10-Cython-build-packaging.json  2d5c9a5c-virtualenv-py3.10-Cython-build-packaging.json  2fa8aa31-virtualenv-py3.10-Cython-build-packaging.json  2fb04de0-virtualenv-py3.10-Cython-build-packaging.json  2fb3a749-virtualenv-py3.10-Cython-build-packaging.json  3068b8f7-virtualenv-py3.10-Cython-build-packaging.json  32a062bf-virtualenv-py3.10-Cython-build-packaging.json  3a202921-virtualenv-py3.10-Cython-build-packaging.json  3ac3130e-virtualenv-py3.10-Cython-build-packaging.json  3b492eea-virtualenv-py3.10-Cython-build-packaging.json  3c6e9ec4-virtualenv-py3.10-Cython-build-packaging.json  3ee83805-virtualenv-py3.10-Cython-build-packaging.json  4159efcf-virtualenv-py3.10-Cython-build-packaging.json  495321b9-virtualenv-py3.10-Cython-build-packaging.json  497801b4-virtualenv-py3.10-Cython-build-packaging.json  4a39ca12-virtualenv-py3.10-Cython-build-packaging.json  4d602351-virtualenv-py3.10-Cython-build-packaging.json  4d878a9c-virtualenv-py3.10-Cython-build-packaging.json  4eb83019-virtualenv-py3.10-Cython-build-packaging.json  50ba3873-virtualenv-py3.10-Cython-build-packaging.json  55cc2cf4-virtualenv-py3.10-Cython-build-packaging.json  5ac6e2e4-virtualenv-py3.10-Cython-build-packaging.json  (+95 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: about.rst  architecture_overview.rst  conf.py  configuration.rst  data_set_splits.rst  dev_guide.rst  external_libraries.rst  index.rst  model_evaluation.rst  notebooks.rst  requirements.txt  verbs.rst
docs/notebooks/: TrainingAModel.ipynb  train_model.ipynb  train_model_config.toml
docs/pre_executed/: custom_dataset.ipynb  mpr_demo.html  mpr_demo.ipynb  mpr_demo_plotting.py  train_model.ipynb  visualize.ipynb
example_notebooks/: GettingStartedDownloader.ipynb  HoloviewPrototype.ipynb  Visualize.ipynb
graphs/summary/: benchmarks.mem_list.json  benchmarks.time_computation.json
src/fibad/: __init__.py  config_utils.py  download.py  download_stats.py  fibad.py  fibad_default_config.toml  gpu_monitor.py  infer.py  model_exporters.py  plugin_utils.py  predict.py  prepare.py  pytorch_ignite.py  rebuild_manifest.py  train.py
src/fibad_cli/: main.py  predict.py  train.py
src/hyrax/: __init__.py  config_utils.py  download.py  gpu_monitor.py  hyrax.py  hyrax_default_config.toml  infer.py  prepare.py  pytorch_ignite.py  rebuild_manifest.py  train.py
src/hyrax_cli/: main.py
(+88 files in other folders)
